--- a/animation.html
+++ b/animation.html
@@ -11,7 +11,9 @@
 <h1>Fun Stuff!</h1>
 <canvas width="500" height="500" id="canvas"></canvas>
 <br><br>
-<button id="button">Stop</button>
+<button id="circle">Circle</button>
+<button id="dvd">DVD</button>
+<button id="stop">Stop</button>
 <script src="animation.js"></script>
 </body>
 
